首页查看最近更新情况已优化，作者作品统计页面统计接口已优化，网站统计页面已优化，单个作者/作品评论分词分析未验证完成

--- a/src/main/webapp/static/html/literature.html
+++ b/src/main/webapp/static/html/literature.html
@@ -28,6 +28,10 @@
 	</div>
 	<!-- begin container -->
 	<div class="container">
+        <!--loading未完成-->
+		<div class="init-hloading" id="loading" style="display: none">
+			<div class="hloading"><img src="../img/loading-time.gif"></div>
+		</div>
 		<!-- begin Mainbody -->
 		<div id="mainBody" class="row">
 			<!-- begin main -->
