--- a/src/main/webapp/static/html/workInfoList.html
+++ b/src/main/webapp/static/html/workInfoList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>iLiterature-analyse</title>
+<title>iLiterature</title>
 <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="../css/isearch4-resp.css">
 <!-- 时间控件格式 -->
