--- a/src/main/webapp/static/html/workInfo.html
+++ b/src/main/webapp/static/html/workInfo.html
@@ -1,80 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>iLiterature-analyse</title>
-<link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="../css/isearch4-resp.css">
-<!-- 时间控件格式 -->
-<link rel="stylesheet" type="text/css"
-	href="../css/jqueryui/jquery-ui-1.8.21.custom.css">
+    <title>iLiterature</title>
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/isearch4-resp.css">
+    <!-- 时间控件格式 -->
+    <link rel="stylesheet" type="text/css"
+          href="../css/jqueryui/jquery-ui-1.8.21.custom.css">
 </head>
 <body class="layout-wrap">
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container">
-				<button class="btn btn-navbar" data-target=".nav-collapse"
-					data-toggle="collapse" type="button">
-					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<div class="nav-collapse collapse" id="navbar"></div>
-			</div>
-		</div>
-	</div>
-	<div id="overview" class="jumbotron">
-		<div id="logo" class="container"></div>
-	</div>
-	<div class="container">
-		<div id="mainBody" class="row">
-		<div id="location"></div>
-				<div class="search form-inline">
-				<label  id="siteName">
-				</label>&nbsp;&nbsp;
-				<i class="icon-list"></i><a href="workInfoList.html?firstColuId=3&siteId=0">所有作品</a>
-					<label> 检索：</label> <input type="text" id="searchWord"
-						class="input-medium search-query" placeholder="作品">
-						<select id="site" class="span2">
-						</select>
-					<button id="searchButton" class="btn">检索</button>&nbsp;&nbsp;
-				</div>
-			
-			<div class="span12">
-				<div class="row-fluid">
-						<div class="span6 well">
-							<div id='worksType' style='height: 300px;'>作品类型统计</div>
-						</div>
-						<div class="span6 well">
-							<div id='Hits' style='height: 300px;'>作品点击量统计</div>
-						</div>
-				</div>
-			</div>
-			<div class="span12">
-				<div class="row-fluid">
-						<div class="span6 well">
-							<div id='Comments' style='height: 300px;'>作品评论量统计</div>
-						</div>
-						<div class="span6 well">
-							<div id='Recoms' style='height: 300px;'>作品推荐量统计</div>
-						</div>
-				</div>
-			</div>
-		</div>
-		<!-- end of mainBody -->
-		<div class="row well">
-			<div id="footer"></div>
-		</div>
-	</div>
-	<script src="../js/ext/jquery-1.8.3.js"></script>
-	<script src="../js/ext/bootstrap.js"></script>
-	<script src="../js/ext/bootstrap-tab.js"></script>
-	<script src="../js/chart/echarts-all.js"></script>
-	<script type="text/javascript" src="../js/common.js"></script>
-	<script type="text/javascript" src="../js/jquery-ui-1.8.21.custom.min.js"></script>
-	<script type="text/javascript" src="../js/utils.js"></script>
-	<script type="text/javascript" src="../js/jquery.scrollUp.min.js"></script>
-	<!-- top1 -->
-	<script type="text/javascript" src="../js/jquery.unveil.min.js"></script>
-	<!-- top2 -->
-	<script type="text/javascript" src="../js/cachepage.js"></script>
-	<script type="text/javascript" src="../js/workInfo.js"></script>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <button class="btn btn-navbar" data-target=".nav-collapse"
+                    data-toggle="collapse" type="button">
+                <span class="icon-bar"></span> <span class="icon-bar"></span> <span
+                    class="icon-bar"></span>
+            </button>
+            <div class="nav-collapse collapse" id="navbar"></div>
+        </div>
+    </div>
+</div>
+<div id="overview" class="jumbotron">
+    <div id="logo" class="container"></div>
+</div>
+<div class="container">
+    <div id="mainBody" class="row">
+        <div id="location"></div>
+        <div class="search form-inline">
+            <label id="siteName">
+            </label>&nbsp;&nbsp;
+            <i class="icon-list"></i><a href="workInfoList.html?firstColuId=3&siteId=0">所有作品</a>
+            <label> 检索：</label> <input type="text" id="searchWord"
+                                       class="input-medium search-query" placeholder="作品">
+            <select id="site" class="span2">
+            </select>
+            <button id="searchButton" class="btn">检索</button>
+            &nbsp;&nbsp;
+        </div>
+
+        <div class="span12">
+            <div class="row-fluid">
+                <div class="span6 well">
+                    <div id='worksType' style='height: 300px;'>作品类型统计</div>
+                </div>
+                <div class="span6 well">
+                    <div id='Hits' style='height: 300px;'>作品点击量统计</div>
+                </div>
+            </div>
+        </div>
+        <div class="span12">
+            <div class="row-fluid">
+                <div class="span6 well">
+                    <div id='Comments' style='height: 300px;'>作品评论量统计</div>
+                </div>
+                <div class="span6 well">
+                    <div id='Recoms' style='height: 300px;'>作品推荐量统计</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of mainBody -->
+    <div class="row well">
+        <div id="footer"></div>
+    </div>
+</div>
+<script src="../js/ext/jquery-1.8.3.js"></script>
+<script src="../js/ext/bootstrap.js"></script>
+<script src="../js/ext/bootstrap-tab.js"></script>
+<script src="../js/chart/echarts-all.js"></script>
+<script type="text/javascript" src="../js/common.js"></script>
+<script type="text/javascript" src="../js/jquery-ui-1.8.21.custom.min.js"></script>
+<script type="text/javascript" src="../js/utils.js"></script>
+<script type="text/javascript" src="../js/jquery.scrollUp.min.js"></script>
+<!-- top1 -->
+<script type="text/javascript" src="../js/jquery.unveil.min.js"></script>
+<!-- top2 -->
+<script type="text/javascript" src="../js/cachepage.js"></script>
+<script type="text/javascript" src="../js/workInfo.js"></script>
 </body>
