--- a/src/main/webapp/static/html/workDetailTemp.html
+++ b/src/main/webapp/static/html/workDetailTemp.html
@@ -55,7 +55,7 @@
 				    <div id="tagbox" class="wordcloud"><h3 align="center">评论词云</h3><br></div>
 					<!--<div id='detail'></div>-->
 				</div>
-				<div class="span6 well">
+				<div class="span6 well" id="chartDiv" style="display:none">
 					<!-- 图表区域 -->
 					<div id='iCharts' style='height: 330px;padding-top:10px;'></div>
 				</div>
