未登录跳转到登录页，最新作者改为最热作者

--- a/src/main/webapp/static/html/literature.html
+++ b/src/main/webapp/static/html/literature.html
@@ -37,13 +37,13 @@
 			<!-- begin main -->
 			<div class="span9" id="main-side">
 				<div class="well">					  
-                   <!--最新作者  -->
+                   <!--最热作者  -->
 					<div class="row-fluid">
 						<div class="span10">
 							<h5 class="page-header" data-toogle="popover"
 								data-placement="top" data-content="最新的网络文学" data-trigger="hover"
 								data-html="true">
-								<i class="icon-align-left"></i>最新作者 <a id="author_Count">&nbsp; 作者区域分布</a>|<a id="author_List">&nbsp;最新作者列表 </a>
+								<i class="icon-align-left"></i>最热作者 <a id="author_Count">&nbsp; 作者区域分布</a>|<a id="author_List">&nbsp;最热作者列表 </a>
 							</h5>
 						</div>
 						<div class="span2">
